--- a/contact.html
+++ b/contact.html
@@ -13,43 +13,52 @@
 </head>
 
 <body background="assets/images/superman-symbol-wallpaper.jpg">
+  <div class="container" id="tops">
 
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <div class="navbar-brand">
-          <div class='brand'>Kevin Bond</div>
-        </div>
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand">Kevin Bond</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div><!--/.container-fluid -->
+        </nav>
+
       </div>
 
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-
-  <div class="container-fluid" style="height: 600px;">
-     <div class="row align-items-center">
-         <div class="col-md-12">
-             <div class="page-header">
-                 <h1 class="main">Contact</h1>
-             </div>
-         </div>
-    </div>
-    <br>
-    <div class="row">
+      <div class="container-fluid" id="container-bod">
+         <div class="row align-items-center">
+             <div class="col-sm-10 col-md-8 col-lg-6" id="about-bod">
+                 <div class="page-header">
+                     <h1 class="main">Contact</h1>
+                 </div>
+                <br>
+                 <div class="row">
         <div class="col-md-12">
           <form>
             <div class="form-group">
             <label for="exampleInputEmail1">Name</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Name">
+              <input type="email" class="form-control"aria-describedby="emailHelp" placeholder="Enter Name">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Email</label>
@@ -57,12 +66,13 @@
             </div>
             <div class="form-group">
             <label for="exampleInputEmail1">Message</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" style="height: 175px;">
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
               <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
     </div>
+  </div>
   </div>
 
   <div class="footer navbar-fixed-bottom">
