--- a/index.html
+++ b/index.html
@@ -13,40 +13,52 @@
 </head>
 
 <body background="assets/images/superman-symbol-wallpaper.jpg">
+  <div class="container" id="tops">
 
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <div class="navbar-brand">
-          <div class='brand'>Kevin Bond</div>
-        </div>
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand">Kevin Bond</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div><!--/.container-fluid -->
+        </nav>
+
       </div>
 
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
 
-  <div class="container-fluid" style="height: 100%;">
+  <div class="container-fluid" id="container-bod">
      <div class="row align-items-center">
-         <div class="col-md-12">
+         <div class="col-sm-10 col-md-8 col-lg-6" id="about-bod">
              <div class="page-header">
                  <h1 class="main">About Me</h1>
              </div>
             <br>
              <div class="row">
-                 <div class="col-md-2">
-                     <img src="assets/images/Halloween.jpg" style="float:left; height:150px" class="img-fluid" alt="Responsive image" />
+                 <div class="col-md-1">
+                     <img src="assets/images/Halloween.jpg" style="float:left; height:150px" class="img-fluid" alt="Responsive image" id="specs" />
                  </div>
-                 <div class="col-md-10">What's there to say? I'm just your everyday friendly neighborhood twenty-something web-developer... Well, aspiring web-developer.
+                 <div class="col-md-10" id="index-para-1">What's there to say? I'm just your everyday friendly neighborhood twenty-something web-developer... Well, aspiring web-developer.
            I didn't always dream of working with code. In fact, it was a very recent realization for me. Just under a year ago, I graduated from Georgetown
            University here in Washington D.C. with a degree in English Literature. Right now, I work in sales at Oracle, which is an amazing company.
            I was truly lucky with my first job out of school. Growing up, I wanted to be Spider-Man. It took twenty-five years to realize that I don't look good in the tights, and the rest is history. I dropped web-slinging for web-development.</div>
@@ -67,7 +79,5 @@
             © 2018 Copyright:
         </div></div>
         <!--/.Copyright-->
-
-    </footer>
 
 </body>
